syntax = "proto3";

option go_package = "./service";

// Compile protofile with:
// protoc -I="." --go_out="." service/service.proto
// protoc --go-grpc_out="." service/service.proto

// go mod init packageName
// go mod tidy

package service;


message RequestPort {
    string name = 1;
    string port = 2;
}

message ReturnPort {
    string address = 1;
}

message RequestBid {
    int32 price = 1; 
}

message Ack {
    enum Status {
        FAIL = 0;
        SUCCESS = 1;
    }
    Status status = 1;
}

message InfoRequest {
    string requestName = 1;
}

message InfoResponse {
    string responseName = 1;
}

message ReplicateClientAddress {
    repeated string addresses = 1;
}

service Service {
    rpc RegisterClientPortOnPrimaryServer (RequestPort) returns (ReturnPort);
    rpc Bid (RequestBid) returns (Ack);
    rpc PublishClientAddress (ReplicateClientAddress) returns (Ack);
    rpc Broadcast (RequestBid) returns (Ack);
    rpc GetName (InfoRequest) returns (InfoResponse);
}